--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>薛周峻的个人主页</title>
 </head>
 <body>
     <h1>你好，薛周峻！</h1>
