--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>你好，薛周峻！</h1>
     <p>Xue_Zhoujun_RhF6。</p>
+    <img src="/苏联国旗_斯大林.png" width="258" height="39" />
 </body>
 </html>
