--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>薛周峻的个人主页</title>
 </head>
 <body>
+    <link rel="icon" type="image/png" href="/Xue_Zhoujun_RhF6.png">
     <h1>你好，薛周峻！</h1>
     <p>Xue_Zhoujun_RhF6。</p>
     <img src="/苏联国旗_斯大林.png" width="1000" height="500" />
