--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p style="font-family:simsum;">Xue_Zhoujun_RhF6。</p>
     <img src="/苏联国旗_斯大林.png" width="1000" height="500" />
     <p>
-        <video width="480" height="360">
+        <video width="480" height="360" controls autoplay>
             <source src="rickroll.mp4" type=video/mp4>
         </video>
     </p>
