--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <center style="font-family:fangsong;color:#FF00FF;font-size:64pt">你好，薛周峻！</center>
     <p style="font-family:simsum;">Xue_Zhoujun_RhF6。</p>
     <img src="/苏联国旗_斯大林.png" width="1000" height="500" />
+</body>
+<body>
     <p>
         <video width="480" height="360" controls autoplay>
             <source src="rickroll.mp4" type=video/mp4>
+            <source src="rickroll.ogg" type="video/ogg" />
+            <source src="rickroll.webm" type="video/webm" />
+            <object data="rickroll.mp4" width="480" height="360">
+               <embed src="rickroll.swf" width="480" height="360" />
+            </object>
         </video>
     </p>
+</body>
+<body>
     <p><a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/99/91/137649199/137649199_da2-1-192.mp4?e=ig8euxZM2rNcNbNM7wdVhwdlhbKMhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1725791926&gen=playurlv2&os=bcache&oi=2882929688&trid=0000c5f31b28ccf34945a26ac7051e1df894T&mid=1882208752&platform=html5&og=cos&upsig=0ade120968d1d94a5c22c47fdbcd0279&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=62607&bvc=vod&nettype=0&bw=244006&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">一个好康的视频</a></p>
     <iframe src="example.pdf" width="100%" height="1000pt" frameborder="0"></iframe>
 </body>
