--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <p>
         <video width="480" height="360" controls autoplay>
-            <source src="rickroll.mp4" type=video/mp4>
-            <source src="rickroll.ogg" type="video/ogg" />
-            <source src="rickroll.webm" type="video/webm" />
-            <object data="rickroll.mp4" width="480" height="360">
-               <embed src="rickroll.swf" width="480" height="360" />
+            <source src="rickroll2.mp4" type=video/mp4>
+            <source src="rickroll2.ogg" type="video/ogg" />
+            <source src="rickroll2.webm" type="video/webm" />
+            <object data="rickroll2.mp4" width="480" height="360">
+               <embed src="rickroll2.swf" width="480" height="360" />
             </object>
         </video>
     </p>
