--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
     <p>曼德勃罗集渲染老 https://wwpi.lanzouj.com/iSJ5w2abzc4f</p>
     <p>cpp曼德勃罗集渲染.zip https://wwpi.lanzouj.com/ijlb62b615vc</p>
     <p>midis https://wwpi.lanzouj.com/ixiMv25a3rve</p>
+    <p>
+        上颠佬课：
+        1.Minecraft JE;
+        2.C/Java/TW;
+        3.Black MIDI;
+        4.musics;
+    </p>
 </body>
 </html>
