--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>薛周峻的个人主页</title>
+<title>RhF6</title>
 </head>
 <body>
     <link rel="icon" type="image/png" href="/Xue_Zhoujun_RhF6.png">
