--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>RhF6</title>
+    <meta charset="utf-8">
+    <title>RhF6</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <link rel="icon" type="image/png" href="/Xue_Zhoujun_RhF6.png">
