--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <center style="font-family:simhei;color:#FF00FF;font-size:64pt">RhF6的网页</center>
     <p>https://github.com/Xue-Zhoujun-RhF6</p>
     <p style="font-family:simsum;">Xue_Zhoujun_RhF6。</p>
+    <center style="font-family:simhei;color:#FF00FF;font-size:64pt">⁺✞ʚ感冒药大帝ɞ✟₊</center>
 </body>
 </html>
