--- a/liuyt.html
+++ b/liuyt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>RhF6</title>
+    <title>刘悦瞳</title>
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
