--- a/resources/test.html
+++ b/resources/test.html
@@ -1,1 +1,21 @@
+<style>
+/*--预设--*/ 
+body { padding:0px;margin: 0px; } 
+#lyrow, #lyrow input, #lyrow textarea { font-size:12px;font-family: 'Microsoft YaHei', '微软雅黑', MicrosoftJhengHei, '华文细黑', STHeiti, MingLiu; } 
+#lyrow { height:100vh;width: 100vw; } 
+#lyrow div { min-height: 18px;  } 
+#lyrow input, #lyrow textarea { border:rgb(235, 235, 235) 1px solid;border-radius: 3px;padding: 5px 8px;outline: 0; } 
+#lyrow input:hover, #lyrow textarea:hover { border: 1px solid #6bc1f2; } 
+/*--编辑--*/ 
+#lyrow .fuhrer { color:rgba(255, 9, 0, 1);font-style:italic;font-weight:bold; } 
 
+</style>
+<!--下载font-awesome.css图标包-->
+<!--https://www.58html.com/html/template/font-awesome.zip-->
+<link rel="stylesheet" href="https://www.58html.com/gui/css/font-awesome/css/font-awesome.css?v=9">
+<div id="lyrow">
+
+        
+    <audio  src="https://xue-zhoujun-rhf6.github.io/resources/0715.mp3" preload="preload" controls="controls"></audio>
+<div class="fuhrer">听音频猜梗~but不是原音频~猜对了我赏他源文本~<br></div>
+</div>
